--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "lint:eslint": "eslint",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:fix": "prettier --write --list-different . && npm run lint:eslint --fix"
+    "lint:fix": "prettier --write --list-different . && npm run lint:eslint --fix",
+    "spec:unit": "vitest --coverage",
+    "ci": "npm run lint && npm run spec:unit",
+    "update:snapshots": "npm run spec:unit -- -u"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
